--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="icons/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinity-Days Tracker</title>
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "n7pbks69sz");
+    </script>
   </head>
   <body>
     <div id="root"></div>
